--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "eslint-plugin"
   ],
   "author": "Brenden Palmer",
+  "repository": {
+    "type": "git",
+    "url": "https: //github.com/brendenpalmer/eslint-plugin-disable-features.git"
+  },
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha tests --recursive"
