--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha tests --recursive"
+    "test": "mocha tests --recursive",
+    "release": "standard-version"
   },
   "dependencies": {
     "requireindex": "~1.1.0"
@@ -22,10 +23,16 @@
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "eslint": "~3.9.1",
-    "mocha": "^3.1.2"
+    "mocha": "^3.1.2",
+    "standard-version": "^4.2.0"
   },
   "engines": {
     "node": ">=6.0.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "standard-version": {
+    "skip": {
+      "changelog": true
+    }
+  }
 }
