--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,11 @@
 {
+  "plugins": ["add-module-exports"],
   "presets": [
     [
       "env",
       {
         "targets": {
-          "node": 4
+          "node": "4"
         }
       }
     ]
