Use babel, target node 4, and integrate with prettier

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,13 @@ node_js:
   - 4
   - 6
   - 8
+  - 9
+  - "node"
 
-script: yarn run test
+before_script:
+  - npm install -g gulp-cli
+
+script: yarn run build
 
 matrix:
   fast_finish: true
