--- a/package.json
+++ b/package.json
@@ -14,22 +14,40 @@
   },
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha tests --recursive",
+    "pre-commit": "./scripts/prettier.sh",
+    "build": "gulp --prod",
+    "test": "gulp test",
     "release": "standard-version"
   },
   "dependencies": {
     "requireindex": "~1.1.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "eslint": "~3.9.1",
-    "mocha": "^3.1.2",
-    "standard-version": "^4.2.0"
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.0.3",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-env": "^1.6.1",
+    "del": "^3.0.0",
+    "eslint": "^4.13.0",
+    "eslint-config-prettier": "^2.9.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
+    "gulp-eslint": "^4.0.0",
+    "gulp-mocha": "^4.3.1",
+    "gulp-sequence": "^0.4.6",
+    "mocha": "^4.0.1",
+    "pre-commit": "^1.2.2",
+    "prettier": "^1.9.1",
+    "standard-version": "^4.2.0",
+    "yargs": "^10.0.3"
   },
   "engines": {
     "node": ">=4.0.0"
   },
   "license": "MIT",
+  "pre-commit": [
+    "pre-commit"
+  ],
   "standard-version": {
     "skip": {
       "changelog": true
