--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
     "del": "^3.0.0",
     "eslint": "^4.15.0",
     "eslint-config-prettier": "^2.9.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-babel": "^7.0.0",
     "gulp-eslint": "^4.0.1",
+    "gulp-hub": "^4.1.0",
     "gulp-mocha": "^5.0.0",
-    "gulp-sequence": "^1.0.0",
-    "mocha": "^4.1.0",
+    "mocha": "^5.0.0",
     "pre-commit": "^1.2.2",
     "prettier": "^1.10.2",
     "standard-version": "^4.3.0",
-    "yargs": "^10.1.1"
+    "yargs": "^11.0.0"
   },
   "engines": {
     "node": ">=4.0.0"
