--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,10 @@ node_js:
 
 before_script:
   - npm install -g gulp-cli
+  - greenkeeper-lockfile-update
 
+before_install: yarn global add greenkeeper-lockfile@1
+after_script: greenkeeper-lockfile-upload
 script: yarn run build
 
 matrix:
