--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
   "plugins": ["add-module-exports"],
   "presets": [
     [
-      "env",
+      "@babel/env",
       {
         "targets": {
           "node": "4"
