--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,10 @@ language: node_js
 cache: yarn
 
 node_js:
-  - 4
   - 6
   - 8
-  - 9
-  - "node"
+  - 10
+  - 'node'
 
 before_script:
   - npm install -g gulp-cli
