--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "yargs": "^13.2.2"
   },
   "engines": {
-    "node": ">=4.0.0"
+    "node": "6.* || 8.* || >= 10.*"
   },
   "license": "MIT",
   "pre-commit": [
