--- a/package.json
+++ b/package.json
@@ -23,25 +23,27 @@
     "requireindex": "~1.2.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-env": "^1.6.1",
-    "del": "^3.0.0",
-    "eslint": "^4.15.0",
-    "eslint-config-prettier": "^2.9.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/register": "^7.4.0",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-add-module-exports": "^1.0.0",
+    "del": "^4.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.1.0",
     "gulp": "^4.0.0",
-    "gulp-babel": "^7.0.0",
-    "gulp-eslint": "^4.0.1",
-    "gulp-mocha": "^5.0.0",
-    "mocha": "^5.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-eslint": "^5.0.0",
+    "gulp-mocha": "^6.0.0",
+    "mocha": "^6.0.2",
     "pre-commit": "^1.2.2",
     "prettier": "^1.10.2",
-    "standard-version": "^4.3.0",
-    "yargs": "^11.0.0"
+    "standard-version": "^5.0.2",
+    "yargs": "^13.2.2"
   },
   "engines": {
-    "node": ">=4.0.0"
+    "node": "6.* || 8.* || >= 10.*"
   },
   "license": "MIT",
   "pre-commit": [
