--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-disable-features",
-  "version": "0.1.3",
+  "version": "0.2.0-0",
   "description": "eslint plugin that contains rules to disable certain features",
   "keywords": [
     "eslint",
